@@ -13,3 +13,4 @@
 ^cover_db$
 ^pod2htm.*\.tmp$
 ^Dist-Zilla-PluginBundle-IDOPEREL-.*$
+^\.build.*$
