@@ -1,5 +1,4 @@
 name    = Dist-Zilla-PluginBundle-IDOPEREL
-version = 0.5
 author  = Ido Perlmuter <ido@ido50.net>
 license = Perl_5
 copyright_holder = Ido Perlmuter
@@ -7,15 +6,18 @@ copyright_holder = Ido Perlmuter
 [@Filter]
 -bundle = @Classic
 -remove = Readme
+-remove = PkgVersion
 
 [AutoPrereqs]
 [CheckChangesHasContent]
 [DistManifestTests]
 [@Git]
 [GithubMeta]
+[InstallGuide]
 [MetaJSON]
 [MinimumPerl]
 [NextRelease]
 [ReadmeFromPod]
 [TestRelease]
 [Signature]
+[VersionFromModule]
