@@ -1,9 +1,13 @@
 Revision history for Dist-Zilla-PluginBundle-IDOPEREL
 
 {{$NEXT}}
+	- Added Plugin::InstallGuide
+	- Added Plugin::VersionFromModule in favor of Plugin::PkgVersion so I
+	  could use the version module for versioning
 
 0.5       2011-03-14 22:08:43 Asia/Jerusalem
-	- Removed Plugin::LatestPrereqs as it's not ready yet (enforces core modules which is bad)
+	- Removed Plugin::LatestPrereqs as it's not ready yet (enforces core
+	  modules which is bad)
 	- Added Plugin::Signature
 
 0.4       2010-12-28 16:10:03 Asia/Jerusalem
